# LysioDB

./: .gitignore  LICENSE  README.md  pyproject.toml
LysioDB/: __init__.py  calculations.py  category.py  config.py  dashboard.py  database.py  export.py  geo.py  identify.py  location.py  power.py  qr.py  transform.py
RikardDB/: __init__.py  calculations.py  database.py  export.py  identify.py  metadata.py  power.py  transform.py
RikardDB.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
