[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LysioDB"
version = "0.1"
dependencies = [
  "numpy",
  "polars",
  "polars-readstat",
  "plotly",
  "kaleido",
  "pyreadstat",
  "wordcloud",
  "spacy",
  "matplotlib",
  "ipfn",
  "python-pptx",
  "thefuzz",
  "xlsxwriter",
]
